Fix gallery spacing

--- a/source/assets/stylesheets/launch-sections.scss
+++ b/source/assets/stylesheets/launch-sections.scss
@@ -106,6 +106,7 @@ section {
   .gallery {
     height: 640px;
     position: relative;
+    margin-top: 2em;
   }
 
   .gallery-display {
